@startuml

left to right direction

class Balls{
color: str
n_balls: int
}

class Hat{
colors: list
n_balls_list: list
create_balls()
}

class Experiment{
hat: Hat
run_experiment(n_sample: int)
run_multiple_experiments(n_experiments: int, n_sample: int)
}

Balls "*" --*  "1" Hat
Hat "1" --* "1" Experiment

@enduml